[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/models/model_enemy_sniper.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/enemy/sniper/sniper.gd" type="Script" id=2]
[ext_resource path="res://assets/models/mesh_vfx_enemy_snipershot.obj" type="ArrayMesh" id=3]
[ext_resource path="res://assets/vfx_atlas.png" type="Texture" id=4]
[ext_resource path="res://shaders/vfx_atlas_offset.shader" type="Shader" id=5]
[ext_resource path="res://assets/models/mesh_vfx_enemy_snipershot_warn.obj" type="ArrayMesh" id=6]

[sub_resource type="CapsuleShape" id=1]
radius = 0.7
height = 0.9

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )
shader_param/albedo_color = Color( 1, 1, 1, 1 )
shader_param/opacity = 1.0
shader_param/uv_scale = Vector2( 0.063, 0.063 )
shader_param/uv_offset = Vector2( 0.063, 0.063 )
shader_param/albedo_tex = ExtResource( 4 )

[sub_resource type="GDScript" id=3]
script/source = "extends MeshInstance

onready var mat = get_active_material(0)
var time := 0.0
const HOLD_TIME = 0.1
const TOTAL_TIME = 0.5
#var opacity_fac := 1.0
const UV_START := 0.063
const UV_END := 0.121
var uv_shift := UV_START
var uv_shift_fac :float

func _ready():
	set_process(false)
	uv_shift_fac = (UV_END-UV_START)/float(TOTAL_TIME-HOLD_TIME)

func show_fx():
	time = 0.0
	uv_shift = UV_START
	mat.set_shader_param(\"uv_offset\",Vector2(0.063,uv_shift))
	set_process(true)
	show()

func _process(delta):
	time += delta
	if time < HOLD_TIME:
		return
	uv_shift += uv_shift_fac*delta
	mat.set_shader_param(\"uv_offset\",Vector2(0.063,uv_shift))
	if time >= TOTAL_TIME:
		set_process(false)
		hide()
"

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )
shader_param/albedo_color = Color( 1, 1, 1, 1 )
shader_param/opacity = 1.0
shader_param/uv_scale = Vector2( 0.063, 0.063 )
shader_param/uv_offset = Vector2( 0.063, 0.063 )
shader_param/albedo_tex = ExtResource( 4 )

[node name="sniper" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0 )
collision_layer = 2
collision_mask = 258
script = ExtResource( 2 )

[node name="model" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.15, -6.55671e-09 )
shape = SubResource( 1 )

[node name="NavigationAgent" type="NavigationAgent" parent="."]
target_desired_distance = 2.0
agent_height_offset = 0.4

[node name="blink_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="state_timer" type="Timer" parent="."]
one_shot = true

[node name="cooldown_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ray_sight" type="RayCast" parent="."]
cast_to = Vector3( 0, 0, -200 )
collision_mask = 257

[node name="ray_aim" type="RayCast" parent="."]
cast_to = Vector3( 0, 0, -200 )
collision_mask = 257

[node name="ray_vfx_holder" type="Spatial" parent="ray_aim"]

[node name="shot" type="MeshInstance" parent="ray_aim/ray_vfx_holder"]
visible = false
mesh = ExtResource( 3 )
skeleton = NodePath("../..")
material/0 = SubResource( 2 )
script = SubResource( 3 )

[node name="warn" type="MeshInstance" parent="ray_aim/ray_vfx_holder"]
visible = false
mesh = ExtResource( 6 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )

[connection signal="target_reached" from="NavigationAgent" to="." method="_on_NavigationAgent_target_reached"]
[connection signal="timeout" from="blink_timer" to="." method="_on_blink_timer_timeout"]
[connection signal="timeout" from="state_timer" to="." method="_on_state_timer_timeout"]
